started creating calculator shape and buttons

--- a/index.html
+++ b/index.html
@@ -4,11 +4,33 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
   <title>JS Calculator</title>
 </head>
 <body>
   <div id="calc-body">
+    <div id="calc-screen"></div>
+    <div id="calc-btn-grid">
+      <button id="clear-btn" class="btn">Clear</button>
+      <button id="delete-btn" class="btn">Delete</button>
+      <button id="" class="btn"></button>
+      <button id="" class="btn"></button>
+      <button id="" class="btn"></button>
+      <button id="" class="btn"></button>
+      <button id="" class="btn"></button>
+      <button id="" class="btn"></button>
+      <button id="" class="btn"></button>
+      <button id="" class="btn"></button>
+      <button id="" class="btn"></button>
+      <button id="" class="btn"></button>
+      <button id="" class="btn"></button>
+      <button id="" class="btn"></button>
+      <button id="" class="btn"></button>
+      <button id="" class="btn"></button>
+      <button id="" class="btn"></button>
 
+    </div>
   </div>
 </body>
 </html>
