--- a/index.html
+++ b/index.html
@@ -10,25 +10,28 @@
 </head>
 <body>
   <div id="calc-body">
-    <div id="calc-screen"></div>
+    <input type="text" name="input" size="16" id="calc-screen">
     <div id="calc-btn-grid">
-      <button id="clear-btn" class="btn">Clear</button>
-      <button id="delete-btn" class="btn">Delete</button>
-      <button id="" class="btn"></button>
-      <button id="" class="btn"></button>
-      <button id="" class="btn"></button>
-      <button id="" class="btn"></button>
-      <button id="" class="btn"></button>
-      <button id="" class="btn"></button>
-      <button id="" class="btn"></button>
-      <button id="" class="btn"></button>
-      <button id="" class="btn"></button>
-      <button id="" class="btn"></button>
-      <button id="" class="btn"></button>
-      <button id="" class="btn"></button>
-      <button id="" class="btn"></button>
-      <button id="" class="btn"></button>
-      <button id="" class="btn"></button>
+      <button id="clear-btn" class="btn">CA</button>
+      <button id="delete-btn" class="btn">C</button>
+      <button id="power-btn" class="btn">^</button>
+      <button id="7-btn" class="btn">7</button>
+      <button id="8-btn" class="btn">8</button>
+      <button id="9-btn" class="btn">9</button>
+      <button id="div-btn" class="btn">÷</button>
+      <button id="4-btn" class="btn">4</button>
+      <button id="5-btn" class="btn">5</button>
+      <button id="6-btn" class="btn">6</button>
+      <button id="mult-btn" class="btn">×</button>
+      <button id="1-btn" class="btn">1</button>
+      <button id="2-btn" class="btn">2</button>
+      <button id="3-btn" class="btn">3</button>
+      <button id="sub-btn" class="btn">-</button>
+      <button id="dec-btn" class="btn">.</button>
+      <button id="0-btn" class="btn">0</button>
+      <button id="eq-btn" class="btn">=</button>
+      <button id="add-btn" class="btn">+</button>
+
 
     </div>
   </div>
